--- a/views/email/signUpVerification.pug
+++ b/views/email/signUpVerification.pug
@@ -12,5 +12,5 @@ block content
             tbody
               tr
                 td= ` Here is your code: ${verify_code}`
-                  //- a(href=`${url}`, target=`_blank`) Confirm
+                  a(href=`${url}`, target=`_blank`) Confirm
   //- p If you didn't forget your password, please ignore this email!
