--- a/views/pages/common/dropdown/addOrRemoveBlogFromReadinglistDropdown.pug
+++ b/views/pages/common/dropdown/addOrRemoveBlogFromReadinglistDropdown.pug
@@ -1,5 +1,5 @@
 // add blog to or delete blog from readingList
-.dropdown.positionel(data-positionel-type='dropdown' data-positionel-name='readingList-dropdown' data-active='false' data-pointer-position='center' data-position='center' data-delay-hide='false' data-load-spinner='false' data-static='false' data-has-defined-class='true' data-hide-by='default' data-animation='fade' data-show-event='click' data-set-positionbtn-width='false' data-child-positionel='false' data-='')
+.dropdown.positionel(data-positionel-type='dropdown' data-positionel-name='readingList-dropdown' data-active='false' data-pointer-position='center' data-position='center' data-delay-hide='false' data-load-spinner='true' data-static='false' data-has-defined-class='true' data-hide-by='default' data-animation='fade' data-show-event='click' data-set-positionbtn-width='false' data-child-positionel='false' data-='')
     .overlay.overlay-t
     .positionel-container(style='\
     top: 8rem;\
@@ -14,7 +14,7 @@
         .positionel-content
             ul.list(data-col='3' data-item-hover='false')
                 .list-container(style='padding: 2rem 0')
-                    each readingList in userData.readingLists
+                    each readingList in me.readingLists
                         li.list-item(style='padding: 1rem 2rem' data-id=readingList._id)
                             button.btn-checkbox
                                 i.fa.fa-check(aria-hidden='true')
@@ -22,6 +22,6 @@
                             i.fa.fa-lock.dim(aria-hidden='true')
                   
                 .line-dim
-                .list-item(style='padding: 2rem 2rem')
+                .list-item(style='padding: 2rem 2rem' data-action='create-list')
                     .btn-inline.f-size-md(data-positionel-btn='' data-positionel-name='create-new-reading-list')
                         | Create new list
