--- a/views/pages/common/dropdown/userProfileOptionsDropdown.pug
+++ b/views/pages/common/dropdown/userProfileOptionsDropdown.pug
@@ -31,4 +31,4 @@
                     .line-dim.mg-v-lw
                     a.list-item(href='')
                         p Sign out
-                        p= userData.email
+                        p= me.email
