--- a/views/layouts/sidebar/base.pug
+++ b/views/layouts/sidebar/base.pug
@@ -1,4 +1,4 @@
-include ../../components/common_different_component/search_user_or_tweets
-include ./news
-include ./suggested_users_to_follow
+//- include ../../components/common_different_component/search_user_or_tweets
+//- include ./news
+//- include ./suggested_users_to_follow
 
