--- a/views/pages/common/dropdown/blogOptionsDropdown.pug
+++ b/views/pages/common/dropdown/blogOptionsDropdown.pug
@@ -1,7 +1,8 @@
 // blog options
-.dropdown.positionel(data-positionel-type='dropdown' data-positionel-name='blog-options-dropdown' data-active='false' data-pointer-position='center' data-position='center' data-delay-hide='false' data-load-spinner='false' data-static='false' data-has-defined-class='true' data-hide-by='default' data-animation='fade' data-show-event='click' data-set-positionbtn-width='false' data-child-positionel='false')
+.dropdown.positionel(data-positionel-type='dropdown' data-positionel-name='blog-options-dropdown' data-active='false' data-pointer-position='center' data-position='center' data-delay-hide='false' data-load-spinner='true' data-static='false' data-has-defined-class='true' data-hide-by='default' data-animation='fade' data-show-event='click' data-set-positionbtn-width='false' data-child-positionel='false')
     .overlay.overlay-t
     .positionel-container(style='')
+        .spinner
         .positionel-square
         // trigger btn-> when click hide content will show
         .positionel-content
